latest configuration, and add in bootstrap

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,16 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Redmart Sinatra</title>
 
     <link rel="stylesheet" href="css/style.css" media="screen" title="no title" charset="utf-8">
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
   </head>
   <body>
-    <h1>Redmart Sinatra</h1>
+    <div class="container">
+      <h1>Redmart Sinatra</h1>
 
-    <%= yield %>
-
-
+      <%= yield %>
+    </div>
     <script src="js/script.js" charset="utf-8"></script>
   </body>
 </html>
