update the layout with bootstrap

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,7 +12,16 @@
   </head>
   <body>
     <div class="container">
-      <h1>Redmart Sinatra</h1>
+      <header>
+        <h1>Redmart Sinatra</h1>
+        <nav>
+          <ul>
+            <li><a href="/users">Users</a></li>
+            <li>Products</li>
+          </ul>
+        </nav>
+      </header>
+
 
       <%= yield %>
     </div>
