--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,7 +8,6 @@
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
   </head>
   <body>
     <div class="container">
@@ -17,7 +16,7 @@
         <nav>
           <ul>
             <li><a href="/users">Users</a></li>
-            <li>Products</li>
+            <li><a href="/products">Users</a></li>
           </ul>
         </nav>
       </header>
