minor update on users

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,12 +16,11 @@
         <nav>
           <ul>
             <li><a href="/users">Users</a></li>
-            <li><a href="/products">Users</a></li>
+            <li><a href="/products">Products</a></li>
           </ul>
         </nav>
       </header>
-
-
+      
       <%= yield %>
     </div>
     <script src="js/script.js" charset="utf-8"></script>
