--- a/views/users/index.erb
+++ b/views/users/index.erb
@@ -4,7 +4,9 @@
 <ul>
   <% @users.each do |user| %>
   <li>
-    <%= user[:'name'] %>
+    <a href="users/<%= user[:id] %>">
+      <%= user[:name] %>
+    </a>
   </li>
   <% end %>
 </ul>
