latest updates on redmart sinatra

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,11 +16,12 @@
         <nav>
           <ul>
             <li><a href="/users">Users</a></li>
-            <li><a href="/products">Products</a></li>
+            <li><a href="/users/new">Register</a></li>
+            <li><a href="/products">Change this</a></li>
           </ul>
         </nav>
       </header>
-      
+
       <%= yield %>
     </div>
     <script src="js/script.js" charset="utf-8"></script>
