--- a/views/users/show.erb
+++ b/views/users/show.erb
@@ -1,1 +1,8 @@
 <h3><%= @user[:name] %>'s Page</h3>
+<p><%= @user[:address] %></p>
+
+<!-- delete flow  -->
+<form action="/users/<%= @user[:id] %>" method="post">
+  <input type="hidden" name="_method" value="delete">
+  <input type="submit" value="Delete">
+</form>
